--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   get_it: ^1.0.3+2
   eva_icons_flutter: ^2.0.0
   cupertino_icons: ^0.1.2
+  search_map_place: ^0.1.0+2
 
 dev_dependencies:
   flutter_test:
