--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   eva_icons_flutter: ^2.0.0
   cupertino_icons: ^0.1.2
   search_map_place: ^0.1.0+2
+  google_maps_flutter: ^0.5.19+2
+  # location: ^2.3.5
+  geolocator: ^5.0.1
 
 dev_dependencies:
   flutter_test:
