--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,8 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-<key>io.flutter.embedded_views_preview</key>
-<true />
+	<key>io.flutter.embedded_views_preview</key>
+	<string>YES</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>I need it </string>
 	<key>NSLocationWhenInUseUsageDescription</key>
