--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,13 @@ dependencies:
   get_it: ^1.0.3+2
   eva_icons_flutter: ^2.0.0
   cupertino_icons: ^0.1.2
-  # search_map_place: ^0.1.0+2
   google_maps_flutter: ^0.5.19+2
-  # location: ^2.3.5
+  location: ^2.3.5
   geolocator: ^5.0.1
   flutter_bloc: ^0.20.0
   equatable: ^0.3.0
   http: ^0.12.0+2
+  # place_picker: ^0.9.9
 
 dev_dependencies:
   flutter_test:
