--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   http: ^0.12.0+2
   # place_picker: ^0.9.9
   # google_map_location_picker: ^1.0.5+2
+  custom_radio_grouped_button: ^1.0.0
+  # map_view: ^0.0.14
+  koukicons: ^2.0.0
 
 dev_dependencies:
   flutter_test:
