--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   eva_icons_flutter: ^2.0.0
   cupertino_icons: ^0.1.2
   google_maps_flutter: ^0.5.19+2
-  location: ^2.3.5
+  # location: ^2.3.5
   geolocator: ^5.0.1
   flutter_bloc: ^0.20.0
   equatable: ^0.3.0
@@ -22,7 +22,7 @@ dependencies:
   # google_map_location_picker: ^1.0.5+2
   custom_radio_grouped_button: ^1.0.0
   # map_view: ^0.0.14
-  koukicons: ^2.0.0
+  flutter_vector_icons: ^0.2.0
 
 dev_dependencies:
   flutter_test:
