--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_vector_icons: ^0.2.0
   # search_map_place: ^0.1.0+2
   extended_navbar_scaffold: ^1.0.0
+  mapbox_search: ^1.0.1
 
 dev_dependencies:
   flutter_test:
