--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,10 @@ dependencies:
   http: ^0.12.0+2
   custom_radio_grouped_button: ^1.0.0
   flutter_vector_icons: ^0.2.0
-  # search_map_place: ^0.1.0+2
   extended_navbar_scaffold: ^1.0.1
-  mapbox_search: ^1.0.1
+  mapbox_search: ^1.0.2
   flutter_map: ^0.7.0+2
+  flare_flutter: ^1.5.8
 
 dev_dependencies:
   flutter_test:
