--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@
 .pub-cache/
 .pub/
 /build/
+APIKeys.dart
+lib/UI/Resources/APIKeys.dart
+**/lib/**/Resources/APIKeys.dart
 
 # Android related
 **/android/**/gradle-wrapper.jar
@@ -68,3 +71,4 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+lib/UI/Resources/APIKeys.dart
