--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,24 +9,39 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get_it: ^1.0.3+2
-  eva_icons_flutter: ^2.0.0
   cupertino_icons: ^0.1.2
-  google_maps_flutter: ^0.5.19+2
-  geolocator: ^5.0.1
-  flutter_bloc: ^0.21.0
-  equatable: ^0.6.0
-  http: ^0.12.0+2
+  google_maps_flutter: ^1.2.0
+  geolocator: ^6.2.0
+  http: ^0.12.2
   custom_radio_grouped_button: ^1.0.0
-  flutter_vector_icons: ^0.2.0
-  extended_navbar_scaffold: ^1.0.1
-  mapbox_search: ^1.0.2
-  flutter_map: ^0.7.0+2
-  flare_flutter: ^1.5.8
+  flutter_vector_icons: ^0.3.0
+  extended_navbar_scaffold: 1.0.2+1
+  mapbox_search: ^2.1.0
+  mapbox_search_flutter: ^1.0.6+1
+  flutter_map: ^0.8.2
+  user_location: ^0.1.3
+  flare_flutter: ^2.0.6
+  eva_icons_flutter: ^2.0.0
+
+  #State Management
+  stacked: 1.7.7
+  stacked_services: 0.6.6
+  stacked_hooks: 0.1.3+2
+  get_it: 5.0.6
+  injectable: 1.0.7
+
+  #Firebase
+
+  #Authentication
+
+  #Router
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  flutter_map: ^0.8.2
 
 flutter:
   uses-material-design: true
