--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,36 +9,31 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   cupertino_icons: ^0.1.2
-  google_maps_flutter: ^1.2.0
-  geolocator: ^6.2.0
-  http: ^0.12.2
   custom_radio_grouped_button: ^1.0.0
-  flutter_vector_icons: ^0.3.0
+  eva_icons_flutter: ^2.0.0
   extended_navbar_scaffold: 1.0.2+1
+  flare_flutter: ^2.0.6
+  flutter_map: ^0.8.2
+  flutter_vector_icons: ^0.3.0
+  geolocator: ^6.2.0
+  get_it: 5.0.6
+  google_maps_flutter: ^1.2.0
+  http: ^0.12.2
+  injectable: 1.0.7
   mapbox_search: ^2.1.0
   mapbox_search_flutter: ^1.0.6+1
-  flutter_map: ^0.8.2
-  user_location: ^0.1.3
-  flare_flutter: ^2.0.6
-  eva_icons_flutter: ^2.0.0
-
-  #State Management
   stacked: 1.7.7
-  stacked_services: 0.6.6
   stacked_hooks: 0.1.3+2
-  get_it: 5.0.6
-  injectable: 1.0.7
-
-  #Firebase
-
-  #Authentication
-
-  #Router
+  stacked_services: 0.6.6
+  user_location: ^0.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.11.1
+  injectable_generator: ^1.0.7
 
 dependency_overrides:
   flutter_map: ^0.8.2
